# outlier-utils

./: .coveralls.yml  .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  tests.yml
outliers/: __init__.py  smirnov_grubbs.py
tests/: test_smirnov_grubbs.py
