[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outlier_utils"
description = "Utility library for detecting and removing outliers from normally distributed datasets"
readme = "README.rst"
authors = [
    { name = "Masashi Shibata", "email" = "contact@c-bata.link" }
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "outliers.__version__"}

[tool.setuptools.packages.find]
include = ["outliers*"]

[project.urls]
"Homepage" = "https://github.com/c-bata/outlier-utils"
"Sources" = "https://github.com/c-bata/outlier-utils"
"Bug Tracker" = "https://github.com/c-bata/outlier-utils/issues"

[tool.black]
line-length = 99
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | venv
  | node_modules
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['outliers', 'tests']
line_length = 99
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'